[package]
name = "connection_leak_detector"
description = "Detects TCP connection leaks with respect to a particular PID"
authors = ["Finn Bear"]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/connection_leak_detector"

[dependencies]
enum-iterator = "0.7"

[dev-dependencies]
actix-web = "4.0.0-beta.12"
actix-rt = "2"
tokio = "1"
serial_test = "0.5"